Fixed outdated info in Da_Goat and example conf file

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -14,8 +14,8 @@
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
-# The server, Server to connect to (default: irc.flux-net.net)
-Server = irc.Flux-Net.net
+# The server, Server to connect to (default: irc.Azuru.net)
+Server = irc.Azuru.net
 # The main channel, joins this channel on startup (default: #Test)
 Channel = #Test, #Navn
 # The bots Nickname, this is the nickname of the bot (default: Navn)
