Added multiple owners

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -8,6 +8,7 @@
 # 1. # (like python) You can't use # with mid-line comments  #
 # 2. ; (like mIRC)					     #
 # 3. /* */ (C++ multi-line)				     #
+# All lists are comma separated				     #
 # 							     #
 # Save as bot.conf and start navn with ./navn		     #
 # 							     #
@@ -39,8 +40,8 @@ Port = 6667
 [Bot]
 # defines the pid file to use (Default: navn.pid)
 PID File = navn.pid
-# Bot Owner, used to show who manages the bot (default: Derp)
-Owner = n00b
+# Bot Owner(s), used to show who manages the bot (default: <nothing>)
+Owners = n00b
 # This is the owner password, it is used in changing owners, and much more. (default: Navn)
 Password = Test
 # timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
