Added "Welcome Message" to the config which now optionally displays a custom message on join, updated ChangeLog

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -48,6 +48,8 @@ Password = Test
 Socket Timeout = 5
 # Time before the bot initiates a Ping Timeout (default: 120 sec)
 PingTimeoutTime = 120
+# Optional welcome message for on join (default: none)
+Welcome Message = {botnick} has joined. Type '/msg {botnick} help' to see a list of commands.
 
 ##############################################################
 #							     #
