--- a/bot.example.conf
+++ b/bot.example.conf
@@ -115,4 +115,4 @@ WeatherURL = http://www.google.com/ig/api?weather=%l
 # This will load modules in any directory in the binary runtime, do not use absolute paths
 ModuleDir = ../modules/
 # Modules to load :P
-Modules = m_system, modulehandler, help, m_ping, m_join, testmod, searcher, m_dns, about_me, ctcp, encyclopedia, weather, world_clock, navn, channel_logger, m_terminal_input
+Modules = m_system, modulehandler, help, m_ping, m_join, testmod, searcher, m_dns, about_me, ctcp, encyclopedia, weather, world_clock, channel_logger, m_terminal_input, da_goat
