Experiment with scripts :)

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -112,6 +112,8 @@ LogChannel = #Test
 # The URL to use when looking up weather for !weather, standard is google but you can change it.
 # !!THIS IS NOT RECOMMENDED YOU CHANGE IT AS PARSING THE RETURN CAN CAUSE A CRASH!!
 WeatherURL = http://www.google.com/ig/api?weather=%l
+# Directory for lua scripts to load
+LUADir = ../scripts/lua/
 # This will load modules in any directory in the binary runtime, do not use absolute paths
 ModuleDir = ../modules/
 # Modules to load :P
