Imported the code from ANT which makes Navn support custom logging colors in the terminal, added LOG_WARN type, Rewrote how log messages are stripped if nocolor flag is given at start, made sure we're in the terminal before printing messages to stdout, give a warning if we cannot reply to a server because the nickname used is invalid (inspircd does this in debug mode)

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -87,6 +87,8 @@ Identify on connect = true
 Log_File = navn.log
 # Log age before the bot deletes the file
 Log Age = 2
+# Log Color for terminal (Default: \033[22;;36m (blue))
+Color = \033[22;;36m
 
 ##############################################################
 #							     #
