Added time to reconnect to the server and number of tries to the config, moved the receive stuff to the socket files.. no need for them to stupidly be in main.cpp, removed the jump calls incase a socket is never made.. used a timer instead (suggested by xiphias), moved most of the try-catch stuff into the connect function in main.cpp, also because GCC 4 and below have had bugs with how nullptr works.. I defined nullptr as a null void pointer (which should work I hope)

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -29,6 +29,10 @@ Ident = Navn
 Port = 6667
 # A server password (if any) for connection (default: none)
 #Password = I heart passwords!
+# Time in seconds to reconnect to the server.
+ReconnectTime = 30
+# Number of times to try and reconnect to the server.
+ReconnectTries = 5
 
 ##############################################################
 #							     #
