Added a new SendQ limiting system so Navn no longer gets killed from sending too much, Added m_logchan for logging to a channel, Added a new config block called "SendQ", removed spaces from Flux::Sanitize, disabled a lot of the replies in da_goat as they are rather annoying

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -93,6 +93,25 @@ Log_File = navn.log
 Log Age = 2
 # Log Color for terminal (Default: \033[22;;36m (blue))
 Color = \033[22;;36m
+# Channel to log all log messages to
+Log Channel = #Navn
+
+##############################################################
+#							      #
+#	         Buffer Configuration. 			      #
+#							      #
+#	     These are the Buffer limit options.	      #
+##############################################################
+
+[SendQ]
+# Is buffer limiting enabled? (default: true)
+Enabled = true
+# How many lines to send before we apply the limit. (default: 7)
+Burst Rate = 7
+# How many lines to send (default: 5)
+Lines = 5
+# How many seconds before we send more lines (default: 5)
+Rate = 5
 
 ##############################################################
 #							     #
