Ignore SIGPIPE, the socket engine likes to throw a lot of these, TranslateColors in m_logchan repeats messages so i disabled it and just stripped the colors for now, update the module lines in the example conf (clears up some confusing on wht bots are broke)

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -120,9 +120,9 @@ Rate = 5
 #	     This is where the oper info goes   	     #
 ##############################################################
 [Oper]
-# Operator account username (comment out or remove if you dont have one)
+# Operator account username (comment out or remove if you don't have one)
 #Oper_Username = 
-# Operator Password (comment out or remove if you dont have one)
+# Operator Password (comment out or remove if you don't have one)
 #Oper_Password = 
 
 ##############################################################
@@ -140,4 +140,4 @@ WeatherURL = http://www.google.com/ig/api?weather=%l
 # This will load modules in any directory in the binary runtime, do not use absolute paths
 ModuleDir = ../modules/
 # Modules to load :P
-Modules = m_system, modulehandler, help, m_ping, m_join, testmod, searcher, m_dns, about_me, ctcp, encyclopedia, weather, world_clock, channel_logger, m_terminal_input, da_goat
+Modules = m_system, m_modulehandler, m_help, m_ping, m_join, m_testmod, m_searcher, m_dns, m_about_me, m_ctcp, m_encyclopedia, m_weather, m_world_clock, channel_logger, m_terminal_input, da_goat, m_logchan
