Rewrote the command processor to allow for non-hard coded fantasy prefixes

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -1,17 +1,17 @@
 ##############################################################
-# 		Navn Bot Configuration			     #
-#							     #
-# Example Configuration file for Navn IRC Channel bot	     #
-# 							     #
-# File Type: ini					     #
+#               Navn Bot Configuration                       #
+#                                                            #
+# Example Configuration file for Navn IRC Channel bot        #
+#                                                            #
+# File Type: ini                                             #
 # There are a few ways of doing comments in this config      #
 # 1. # (like python) You can't use # with mid-line comments  #
-# 2. ; (like mIRC)					     #
-# 3. /* */ (C++ multi-line)				     #
-# All lists are comma separated				     #
-# 							     #
-# Save as bot.conf and start navn with ./navn		     #
-# 							     #
+# 2. ; (like mIRC)                                           #
+# 3. /* */ (C++ multi-line)                                  #
+# All lists are comma separated                              #
+#                                                            #
+# Save as bot.conf and start navn with ./navn                #
+#                                                            #
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
@@ -35,9 +35,9 @@ ReconnectTime = 30
 ReconnectTries = 5
 
 ##############################################################
-#							     #
-#			Bot Configuration.		     #
-#							     #
+#                                                            #
+#                      Bot Configuration.                    #
+#                                                            #
 # These are the options for the bot when it joins the server.#
 ##############################################################
 
@@ -48,6 +48,8 @@ PID File = navn.pid
 Owners = n00b
 # This is the owner password, it is used in changing owners, and much more. (default: Navn)
 Password = Test
+# This is the character prefix for using channel fantasy commands (default: "!")
+FantasyPrefox = !
 # timeout (in seconds)it takes for the socket to process NOTE: this affects the cpu usage (default: 5 sec)
 Socket Timeout = 5
 # Time before the bot initiates a Ping Timeout (default: 120 sec)
@@ -56,10 +58,10 @@ PingTimeoutTime = 120
 Welcome Message = {botnick} has joined. Type '/msg {botnick} help' to see a list of commands.
 
 ##############################################################
-#							     #
-#	         Services Configuration.		     #
-#							     #
-#	     These are the services options.    	     #
+#                                                            #
+#                Services Configuration.                     #
+#                                                            #
+#            These are the services options.                 #
 ##############################################################
 /* This is where you can have navn identify to services.
    Most people will use nickserv (and earlier versions of navn didn't support this)
@@ -79,10 +81,10 @@ Send String = identify %a %p
 Identify on connect = true
 
 ##############################################################
-#							     #
-#	         Logging Configuration. 		     #
-#							     #
-#	     These are the logging options.		     #
+#                                                            #
+#                   Logging Configuration.                   #
+#                                                            #
+#              These are the logging options.                #
 ##############################################################
 /* Log File location, this is where the logging will be stored.
    It is recommended that this not be empty */
@@ -97,10 +99,10 @@ Color = \033[22;;36m
 Log Channel = #Navn
 
 ##############################################################
-#							      #
-#	         Buffer Configuration. 			      #
-#							      #
-#	     These are the Buffer limit options.	      #
+#                                                            #
+#                   Buffer Configuration.                    #
+#                                                            #
+#            These are the Buffer limit options.             #
 ##############################################################
 
 [SendQ]
@@ -114,22 +116,22 @@ Lines = 5
 Rate = 5
 
 ##############################################################
-#							     #
-#		Oper Configuration.     		     #
-#							     #
-#	     This is where the oper info goes   	     #
+#                                                            #
+#                   Oper Configuration.                      #
+#                                                            #
+#            This is where the oper info goes.               #
 ##############################################################
 [Oper]
 # Operator account username (comment out or remove if you don't have one)
-#Oper_Username = 
+#Oper_Username =
 # Operator Password (comment out or remove if you don't have one)
-#Oper_Password = 
+#Oper_Password =
 
 ##############################################################
-#							     #
-#		     Module Configuration.      	     #
-#							     #
-#	     This is where the oper info goes   	     #
+#                                                            #
+#                  Module Configuration.                     #
+#                                                            #
+#            This is where the oper info goes.               #
 ##############################################################
 [Modules]
 # For the Channel Logger module (comment out or remove if you don't want to log)
