--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,9 @@ file(GLOB SRC_SRCS_CPP RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
 set(SRC_SRCS ${SRC_SRCS_C} ${SRC_SRCS_CPP})
 
 # If using Windows, add the windows.cpp, the win32 threading engine, and the socket engine to the list
-if(WIN32)
-  append_to_list(SRC_SRCS src/windows.cpp)
-endif(WIN32)
+#if(WIN32)
+#  append_to_list(SRC_SRCS src/windows.cpp)
+#endif(WIN32)
 
 sort_list(SRC_SRCS)
 
@@ -33,25 +33,25 @@ if(EXTRA_INCLUDES)
   include_directories(${EXTRA_INCLUDES})
 endif(EXTRA_INCLUDES)
 
-# Under Windows, we also include a resource file to the build
-if(WIN32)
-  # Make sure that the resource file is seen as an RC file to be compiled with a resource compiler, not a C++ compiler
-  set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc LANGUAGE RC)
-  # Add the resource file to the list of sources
-  append_to_list(SRC_SRCS ${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc)
-  # For MinGW, we have to change the compile flags
-  if(MINGW)
-    set(RC_CFLAGS "-DMINGW -Ocoff -I${navn_SOURCE_DIR}/include")
-    # If any sort of debugging is being enabled, add a _DEBUG define to the flags for the resource compiler
-    if(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
-      set(RC_CFLAGS "${RC_CFLAGS} -D_DEBUG")
-    endif(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
-    set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc COMPILE_FLAGS "${RC_CFLAGS}")
-  # For anything else, assumingly Visual Studio at this point, use a different set of compile flags
-  else(MINGW)
-    set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc COMPILE_FLAGS "/i\"${navn_SOURCE_DIR}/include\"")
-  endif(MINGW)
-endif(WIN32)
+# # Under Windows, we also include a resource file to the build
+# if(WIN32)
+#   # Make sure that the resource file is seen as an RC file to be compiled with a resource compiler, not a C++ compiler
+#   set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc LANGUAGE RC)
+#   # Add the resource file to the list of sources
+#   append_to_list(SRC_SRCS ${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc)
+#   # For MinGW, we have to change the compile flags
+#   if(MINGW)
+#     set(RC_CFLAGS "-DMINGW -Ocoff -I${navn_SOURCE_DIR}/include")
+#     # If any sort of debugging is being enabled, add a _DEBUG define to the flags for the resource compiler
+#     if(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
+#       set(RC_CFLAGS "${RC_CFLAGS} -D_DEBUG")
+#     endif(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
+#     set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc COMPILE_FLAGS "${RC_CFLAGS}")
+#   # For anything else, assumingly Visual Studio at this point, use a different set of compile flags
+#   else(MINGW)
+#     set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/win32/win32.rc COMPILE_FLAGS "/i\"${navn_SOURCE_DIR}/include\"")
+#   endif(MINGW)
+# endif(WIN32)
 
 # If compiling with Visual Studio, create a static library out of win32/win32_memory.cpp to be included with everything else, needed to override its override of new/delete operators
 if(MSVC)
